@@ -29,7 +29,7 @@
 .SP
 .fi
 ..
-.TH SoX 1 "September 22, 2008" "sox" "Sound eXchange"
+.TH SoX 1 "October 28, 2008" "sox" "Sound eXchange"
 .SH NAME
 SoX \- Sound eXchange, the Swiss Army knife of audio manipulation
 .SH SYNOPSIS
