@@ -29,7 +29,7 @@
 .SP
 .fi
 ..
-.TH SoX 7 "July 27, 2008" "soxformat" "Sound eXchange"
+.TH SoX 7 "October 28, 2008" "soxformat" "Sound eXchange"
 .SH NAME
 SoX \- Sound eXchange, the Swiss Army knife of audio manipulation
 .SH DESCRIPTION
