@@ -267,7 +267,7 @@ libsox_la_SOURCES += \
 	echo.c echos.c effects.c effects.h effects_i.c fade.c fft4g.c fft4g.h \
 	fifo.h filter.c flanger.c input.c ladspa.c loudness.c mcompand.c \
 	mixer.c noiseprof.c noisered.c noisered.h normalise.c output.c pad.c \
-	pan.c phaser.c pitch.c polyphas.c rabbit.c rate.c \
+	pan.c phaser.c polyphas.c rabbit.c rate.c \
 	rate_filters.h rate_half_fir.h rate_poly_fir0.h rate_poly_fir.h \
 	remix.c repeat.c resample.c reverb.c reverse.c silence.c skeleff.c \
 	speed.c	splice.c stat.c swap.c stretch.c synth.c tempo.c tremolo.c \
